--- a/WebApp/Pages/EventInfos/Details.cshtml
+++ b/WebApp/Pages/EventInfos/Details.cshtml
@@ -5,37 +5,88 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Osavõtjad</h1>
 
 <div>
-    <h4>EventInfo</h4>
-    <hr />
+
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EventInfo.EventName)
+            Ürituse nimi
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EventInfo.EventName)
+            @Html.DisplayFor(model => model.EventInfo!.EventName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EventInfo.EventLocation)
+            Toimumisaeg
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EventInfo.EventLocation)
+            @Html.DisplayFor(model => model.EventInfo!.EventDateTime)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EventInfo.EventDateTime)
+            Koht
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EventInfo.EventDateTime)
+            @Html.DisplayFor(model => model.EventInfo!.EventLocation)
+        </dd>
+
+        <dt class="col-sm-2">
+            Lisainfo
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.EventInfo!.EventDescription)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EventInfo.EventDescription)
+            Osavõtjad
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EventInfo.EventDescription)
+            <br/>
+            <div class="participators">
+                @foreach (var participator in Model.Participators)
+                {
+                    <div class="row participator mb-3">
+                        <div class="col">
+                            <div class="row">
+                                <div class="col participator-name">
+                                    @if (participator!.Person != null)
+                                    {
+                                        @participator.Person.PersonFirstName
+                                    }
+                                    else if (participator.Company != null)
+                                    {
+                                        @participator.Company.CompanyName
+                                    }
+                                </div>
+                                <div class="col participator-code">
+                                    @if (participator.Person != null)
+                                    {
+                                        @participator.Person.PersonIdCode
+                                    }
+                                    else if (participator.Company != null)
+                                    {
+                                        @participator.Company.CompanyRegistryCode
+                                    }
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="col-auto">
+                                <form method="post" asp-page-handler="Delete"
+                                      asp-route-eventInfoId="@Model.EventInfo!.Id"
+                                      asp-route-participatorId="@participator.Id">
+                                    <a href="/Participators/Details?id=@participator.Id" class="btn btn-primary me-4">Vaata</a>
+                                    <button type="submit" class="btn btn-danger">Kustuta</button>
+
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
         </dd>
     </dl>
+
+
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.EventInfo?.Id">Edit</a> |
