--- a/WebApp/Pages/Participators/Create.cshtml
+++ b/WebApp/Pages/Participators/Create.cshtml
@@ -22,7 +22,7 @@
         <div class="form-check">
             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" onchange="@{ Model.IsPerson = !Model.IsPerson; }" value="Company" onclick="toggleSection('Company')">
             <label class="form-check-label" for="flexRadioDefault2">
-                Ettevõtte
+                Ettevõte
             </label>
         </div>
         <form method="post" id="personSection" style="display: block;">
