--- a/WebApp/Pages/EventInfos/Details.cshtml
+++ b/WebApp/Pages/EventInfos/Details.cshtml
@@ -1,12 +1,32 @@
 @page
+@using Domain
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model WebApp.Pages.EventInfos.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Osavõtjad</h1>
 
+<div class="row" style="margin-right: 0; margin-left: 0;">
+
+    <div class="col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
+        <h1 class="text-center">Osavõtjad</h1>
+    </div>
+
+
+    <div class="col-md-9 p-0" style="height: 100px; max-width: max-content; overflow: hidden;">
+        <img src="https://cdn.wallpapersafari.com/36/32/YpBq6m.jpg" alt="no img found">
+    </div>
+
+</div>
+
+<div class="bg-white">
+<br/>
+<br/>
+<div class="w-75 align-content-center mx-auto">
+<h4 class="text-primary">Osavõtjad</h4>
+<br/>
 <div>
 
     <dl class="row">
@@ -43,7 +63,7 @@
             <div class="participators">
                 @foreach (var participator in Model.Participators)
                 {
-                    <div class="row participator mb-3">
+                    <div class="row participator">
                         <div class="col">
                             <div class="row">
                                 <div class="col participator-name">
@@ -68,15 +88,13 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="col">
                             <div class="col-auto">
-                                <form method="post" asp-page-handler="Delete"
+                                <form class="align-items-start" method="post" asp-page-handler="Delete"
                                       asp-route-eventInfoId="@Model.EventInfo!.Id"
                                       asp-route-participatorId="@participator.Id">
-                                    <a href="/Participators/Details?id=@participator.Id" class="btn btn-primary me-4">Vaata</a>
-                                    <button type="submit" class="btn btn-danger">Kustuta</button>
-
+                                    <a href="/Participators/Edit?id=@participator.Id" class=" btn btn-link me-4 text-black-50 text-decoration-none">VAATA</a>
+                                    <button type="submit" class="btn btn-link text-black-50 text-decoration-none">KUSTUTA</button>
                                 </form>
                             </div>
                         </div>
@@ -88,7 +106,188 @@
 
 
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.EventInfo?.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+
+<br/>
+
+<h4 class="text-primary">Osavõtjate lisamine</h4>
+<br/>
+<div class="">
+    <div class="col">
+
+        <div class="form-group row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-10">
+                <div class="row w-50">
+                    <div class="col-md-6">
+                        <div class="form-check">
+                            <input class="form-check-input" checked type="radio" name="flexRadioDefault" id="flexRadioDefault1" onchange="@{ Model.IsPerson = !Model.IsPerson; }" value="Person" onclick="toggleSection('Person')">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                                Eraisik
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" onchange="@{ Model.IsPerson = !Model.IsPerson; }" value="Company" onclick="toggleSection('Company')">
+                            <label class="form-check-label" for="flexRadioDefault2">
+                                Ettevõte
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br/>
+
+        <form method="post" id="personSection" style="display: block;">
+            <input type="hidden" name="eventInfoId" value="@Model.EventInfo.Id"/>
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group row">
+                <label class="col-sm-2 control-label" asp-for="Person.PersonFirstName">Eesnimi:</label>
+                <div class="col-sm-10">
+                    <input asp-for="Person.PersonFirstName" class="form-control w-50" size="10" maxlength="5"/>
+                    <span asp-validation-for="Person.PersonFirstName" class="text-danger"></span>
+                </div>
+            </div>
+            <br/>
+            <div class="form-group row">
+
+                <label asp-for="Person.PersonLastName" class="col-sm-2 control-label">Perekonnanimi:</label>
+                <div class="col-sm-10">
+
+                    <input asp-for="Person.PersonLastName" class="form-control w-50"/>
+                    <span asp-validation-for="Person.PersonLastName" class="text-danger"></span>
+                </div>
+
+            </div>
+            <br/>
+
+            <div class="form-group row">
+                <label asp-for="Person.PersonIdCode" class="col-sm-2 control-label">ID kood:</label>
+                <div class="col-sm-10">
+
+                    <input asp-for="Person.PersonIdCode" class="form-control w-50" type="number"/>
+                    <span asp-validation-for="Person.PersonIdCode" class="text-danger"></span>
+                </div>
+
+            </div>
+            <br/>
+
+            <div class="form-group row">
+                <label asp-for="PaymentType" class="col-sm-2 control-label">Maksmisviis:</label>
+                <div class="col-sm-10">
+
+                    <select asp-for="PaymentType" asp-items="Html.GetEnumSelectList<PaymentType>()" class="form-select w-50"></select>
+                    <span asp-validation-for="PaymentType" class="text-danger"></span>
+                </div>
+
+            </div>
+            <br/>
+
+            <div class="form-group row">
+                <label asp-for="Person.PersonDescription" class="col-sm-2 control-label">Lisa info:</label>
+                <div class="col-sm-10">
+
+                    <textarea asp-for="Person.PersonDescription" class="form-control w-50" rows="3"></textarea>
+                    <span asp-validation-for="Person.PersonDescription" class="text-danger"></span>
+                </div>
+
+            </div>
+
+            <br/>
+
+            <div class="form-group">
+                <div class="col-sm-2">
+                    <a class="btn btn-light me-2" style="width: 74px" asp-page="Index">Tagasi</a>
+                    <input type="submit" style="width: 74px" value="Lisa" class="btn btn-primary"/>
+                </div>
+                <div class="col-sm-10"></div>
+            </div>
+        </form>
+        <form method="post" id="companySection" style="display: none;">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <input type="hidden" name="eventInfoId" value="@Model.EventInfo.Id"/>
+            <div class="form-group row">
+                <label asp-for="Company.CompanyName" class="col-sm-2 control-label">Nimi:</label>
+                <div class="col-sm-10">
+
+                    <input asp-for="Company.CompanyName" class="form-control w-50" data-val-required="Vajalik väli."/>
+                    <span asp-validation-for="Company.CompanyName" class="text-danger" data-valmsg-for="Company.CompanyName"></span>
+                </div>
+            </div>
+            <br/>
+
+            <div class="form-group row">
+                <label asp-for="Company.CompanyRegistryCode" class="col-sm-2 control-label">Registrikood:</label>
+                <div class="col-sm-10">
+
+                    <input asp-for="Company.CompanyRegistryCode" class="form-control w-50" data-val-required="Vajalik väli."/>
+                    <span asp-validation-for="Company.CompanyRegistryCode" class="text-danger" data-valmsg-for="Company.CompanyRegistryCode"></span>
+                </div>
+            </div>
+            <br/>
+
+            <div class="form-group row">
+                <label asp-for="Company.CompanyMemberCount" class="col-sm-2 control-label">Osavõtjate arv:</label>
+                <div class="col-sm-10">
+
+                    <input asp-for="Company.CompanyMemberCount" class="form-control w-50" data-val-required="Vajalik väli."/>
+                    <span asp-validation-for="Company.CompanyMemberCount" class="text-danger" data-valmsg-for="Company.CompanyMemberCount"></span>
+                </div>
+            </div>
+            <br/>
+
+            <div class="form-group row">
+                <label asp-for="PaymentType" class="col-sm-2 control-label">Maksmisviis:</label>
+                <div class="col-sm-10">
+
+                    <select asp-for="PaymentType" asp-items="Html.GetEnumSelectList<PaymentType>()" class="form-select w-50"></select>
+                    <span asp-validation-for="PaymentType" class="text-danger"></span>
+                </div>
+            </div>
+            <br/>
+
+            <div class="form-group row">
+                <label asp-for="Company.CompanyDescription" class="col-sm-2 control-label">Lisa info:</label>
+                <div class="col-sm-10">
+
+                    <textarea asp-for="Company.CompanyDescription" class="form-control w-50" rows="3"></textarea>
+                    <span asp-validation-for="Company.CompanyDescription" class="text-danger"></span>
+                </div>
+            </div>
+
+            <br/>
+            <div class="form-group">
+                <div class="col-sm-2">
+                    <a class="btn btn-light me-2" style="width: 74px" asp-page="Index">Tagasi</a>
+                    <input type="submit" style="width: 74px" value="Lisa" class="btn btn-primary"/>
+                </div>
+                <div class="col-sm-10"></div>
+            </div>
+        </form>
+    </div>
 </div>
+
+</div>
+<br/>
+<br/>
+</div>
+
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <script>
+        function toggleSection(section) {
+            if (section === 'Person') {
+                document.getElementById('personSection').style.display = 'block';
+                document.getElementById('companySection').style.display = 'none';
+            } else if (section === 'Company') {
+                document.getElementById('personSection').style.display = 'none';
+                document.getElementById('companySection').style.display = 'block';
+            }
+        }
+    </script>
+}
