Added info about events on the home page. Small improvements in other pages.

--- a/WebApp/Pages/EventInfos/Create.cshtml
+++ b/WebApp/Pages/EventInfos/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Create";
 }
 
-<div class="bg-white">
+<div class="bg-white" style="height: calc(100vh - 150px)">
     <div class="row" style="margin-right: 0; margin-left: 0;">
 
         <div class="col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
