--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -12,35 +12,23 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">WebApp</a>
+            <a class="navbar-brand" asp-area="" asp-page="/Index">
+                <img alt="logo" src="~/images/logo.svg"/>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                        <a class="nav-link" asp-area="" asp-page="/Index">AVALEHT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Persons/Index">Persons</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Companies/Index">Companies</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Participators/Index">Participators</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/EventInfos/Index">EventInfos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/EventParticipators/Index">EventParticipators</a>
+                        <a class="nav-link" asp-area="" asp-page="/EventInfos/Create">ÜRITUSE LISAMINE</a>
                     </li>
                 </ul>
+                <img class="pe-3" alt="symbol" src="~/images/symbol.svg"/>
             </div>
         </div>
     </nav>
